--- a/src/utils/i18n/locals/en/en.json
+++ b/src/utils/i18n/locals/en/en.json
@@ -19,13 +19,13 @@
     },
     "about": {
         "title": "ABOUT THE COMPANY",
-        "desc": "Ross and Foundation – Your Trusted Construction Partner <br/> 10 years of experience in building business centers and residential complexes! <br/> Ross and Foundation is a construction company playing a key role in shaping the modern architectural landscape of Tashkent. For 10 years, we have been creating business centers and high-quality residential complexes.",
+        "desc": "Ross and Foundation – Your trusted construction partner <br/> 10 years of experience in building business centers and residential complexes! <br/> Ross and Foundation is a construction company playing a key role in shaping the modern architectural landscape of Tashkent. For 10 years, we have been creating business centers and high-quality residential complexes.",
         "card1_title": "Projects in the company’s portfolio",
         "card1_desc": "4",
         "card2_title": "Years in the real estate market",
         "card2_desc": "6 years",
         "card3_title": "People living in our projects",
-        "card3_desc": "1000",
+        "card3_desc": "3000",
         "card4_title": "Residential areas M2",
         "card4_desc": "34,300",
         "fact_title": "5 Facts About the Company",
@@ -136,6 +136,7 @@
         "vacancies1_role": "Bosh xisobchi",
         "vacancies1_direction": "Buhgalteriya, Hisob-kitob",
         "vacancies1_format": "Ofisda ishlash",
+        "vacancies1_more_info":"",
         "vacancies2_role": "Injiner arxitektor",
         "vacancies2_direction": "Dizayn, mahsulot va arxitektura boshqaruvi",
         "vacancies2_format": "Ofisda ishlash",
@@ -406,6 +407,66 @@
         "car_text2": "5 min to Clinic",
         "car_text3": "10 min to School",
         "car_text4": "5 min to Cafes and Restaurants"
+    },
+    "projects6": {
+        "title": "Anhor",
+        "subtitle": "Tashkent’s Leading Trade and Hospitality Hub",
+        "button_text1": "",
+        "button_text2": "Call",
+        "place": "Yunusabad District",
+        "place_location": "Anhor Buyi Street, Tashkent",
+        "school": "",
+        "school_location": "",
+        "business_center": "",
+        "business_center_location": "",
+        "sports_complex": "",
+        "sports_complex_location": "",
+        "image_desc": "Anhor is a modern trade and hospitality complex located in the heart of Tashkent, on Alisher Navoi Street. Covering an area of 6,500 square meters, this project integrates restaurants, a hotel, and commercial facilities, creating a comfortable environment for business and leisure.",
+        "area": "0.65 ha",
+        "area_title": "Project Area",
+        "floor": "4",
+        "floor_title": "Number of Floors",
+        "done_project": "2024",
+        "done_project_title": "Construction Completion Date",
+        "location_title": "Convenient Location",
+        "foot": "On Foot",
+        "foot_text1": "10 min to the park",
+        "foot_text3": "10 min to entertainment venues",
+        "foot_text4": "5 min to cafes and restaurants",
+        "car": "By Car",
+        "car_text1": "5 min to the park",
+        "car_text2": "5 min to entertainment venues",
+        "car_text4": "5 min to cafes and restaurants"
+    },
+    "projects7": {
+        "title": "Oncowell Company",
+        "subtitle": "A Plant for the Production of Oncology Medicines in Tashkent",
+        "button_text1": "",
+        "button_text2": "Call",
+        "place": "",
+        "place_location": "",
+        "school": "",
+        "school_location": "",
+        "business_center": "",
+        "business_center_location": "",
+        "sports_complex": "",
+        "sports_complex_location": "",
+        "image_desc": "Oncowell Company is a modern medical factory planned for construction in the Tashkent region. The enterprise specializes in the production of oncology medicines and plays an important role in the development of Uzbekistan’s pharmaceutical industry. The factory is located in the Tashkent Pharm Park industrial zone, covering an area of 15,000 square meters, with a total construction area of 4,000 square meters.",
+        "area": "1.5 ha",
+        "area_title": "Project Area",
+        "floor": "4",
+        "floor_title": "Number of Floors",
+        "done_project": "2024",
+        "done_project_title": "Construction Completion Date",
+        "location_title": "Convenient Location",
+        "foot": "On Foot",
+        "foot_text1": "10 min to the park",
+        "foot_text3": "10 min to entertainment venues",
+        "foot_text4": "5 min to cafes and restaurants",
+        "car": "By Car",
+        "car_text1": "5 min to the park",
+        "car_text2": "5 min to entertainment venues",
+        "car_text4": "5 min to cafes and restaurants"
     },
     "footer": {
         "links_title1": "INFO",
