--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -25,7 +25,7 @@
         "card2_title": "На рынке недвижимости",
         "card2_desc": "6 лет",
         "card3_title": "Люди живут в наших проектах",
-        "card3_desc": "1000",
+        "card3_desc": "3000",
         "card4_title": "Жилые площади M2",
         "card4_desc": "34 300",
         "fact_title": "5 фактов о компании",
@@ -405,6 +405,73 @@
         "car_text1": "5 мин до метро",
         "car_text2": "5 мин до поликлиники",
         "car_text3": "10 мин до школы",
+        "car_text4": "5 мин до кафе и ресторанов"
+    },
+    "projects6": {
+        "title": "Анхор",
+        "subtitle": "Ведущий торговый и гостиничный комплекс Ташкента",
+        "button_text1": "",
+        "button_text2": "Позвонить",
+        "place": "Юнусабадский район",
+        "place_location": "Улица Анхор Буйи, Ташкент",
+        "school": "",
+        "school_location": "",
+        "business_center": "",
+        "business_center_location": "",
+        "sports_complex": "",
+        "sports_complex_location": "",
+        "image_desc": "Анхор – это современный торговый и гостиничный комплекс, расположенный в центре Ташкента, на улице Алишера Навои. Он объединяет рестораны, гостиницу и коммерческие объекты, создавая комфортные условия для бизнеса и отдыха на площади 6 500 квадратных метров.",
+        "fact_title": "5 фактов о проекте",
+        "fact_desc": "The Knowledge Center – это современный образовательный центр, рассчитанный на 1 200 учеников, ориентированный на научное и технологическое развитие. Центр оснащен передовыми лабораториями по химии и информатике, инновационными методами обучения и интерактивными образовательными программами, направленными на развитие практических навыков учащихся. Расположенный на территории школы №243 в Ташкенте, центр с просторными и светлыми классами способствует повышению качества образования и обеспечивает новое поколение инновационными знаниями.",
+        "fact_card1": "Важный вклад в образовательную инфраструктуру города",
+        "fact_card2": "Инфраструктура, обеспечивающая инновационную образовательную среду",
+        "fact_card3": "Подход, направленный на повышение качества образования",
+        "fact_card4": "Просторные и комфортные учебные помещения",
+        "fact_card5": "Центр научного и технологического развития",
+        "area": "0.65 га",
+        "area_title": "Площадь проекта",
+        "floor": "4",
+        "floor_title": "Количество этажей",
+        "done_project": "2024",
+        "done_project_title": "Дата завершения строительства",
+        "location_title": "Удобство расположения",
+        "foot": "Пешком",
+        "foot_text1": "10 мин до парка",
+        "foot_text3": "10 мин до развлекательных мест",
+        "foot_text4": "5 мин до кафе и ресторанов",
+        "car": "На автомобиле",
+        "car_text1": "5 мин до парка",
+        "car_text2": "5 мин до развлекательных мест",
+        "car_text4": "5 мин до кафе и ресторанов"
+    },
+    "projects7": {
+        "title": "Oncowell Company",
+        "subtitle": "Завод по производству онкологических препаратов в Ташкенте",
+        "button_text1": "",
+        "button_text2": "Позвонить",
+        "place": "",
+        "place_location": "",
+        "school": "",
+        "school_location": "",
+        "business_center": "",
+        "business_center_location": "",
+        "sports_complex": "",
+        "sports_complex_location": "",
+        "image_desc": "Oncowell Company – это современный медицинский завод, запланированный к строительству в Ташкентской области. Предприятие специализируется на производстве онкологических препаратов и играет важную роль в развитии фармацевтической индустрии Узбекистана. Завод расположен в промышленной зоне Tashkent Pharm Park и занимает территорию 15 000 квадратных метров, а общая площадь застройки составляет 4 000 квадратных метров.",
+        "area": "1.5 га",
+        "area_title": "Площадь проекта",
+        "floor": "4",
+        "floor_title": "Количество этажей",
+        "done_project": "2024",
+        "done_project_title": "Дата завершения строительства",
+        "location_title": "Удобство расположения",
+        "foot": "Пешком",
+        "foot_text1": "10 мин до парка",
+        "foot_text3": "10 мин до развлекательных мест",
+        "foot_text4": "5 мин до кафе и ресторанов",
+        "car": "На автомобиле",
+        "car_text1": "5 мин до парка",
+        "car_text2": "5 мин до развлекательных мест",
         "car_text4": "5 мин до кафе и ресторанов"
     },
     "footer": {
