--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -19,13 +19,13 @@
     },
     "about": {
         "title": "KOMPANIYA HAQIDA",
-        "desc": "Ross and Foundation – Ishonchli Qurilish Hamkoringiz <br/> 10 yillik tajriba bilan biznes markazlari va turar-joy binolari qurilishida yetakchi kompaniya! <br/> Ross and Foundation – Toshkentning zamonaviy arxitektura manzarasini yaratishda muhim o‘rin tutuvchi qurilish kompaniyasi. Biz 10 yildan beri biznes markazlari va yuqori sifatli turar-joy majmualarini barpo etib kelamiz.",
+        "desc": "Ross Foundation - Ishonchli qurilish hamkoringiz <br/> 10 yillik tajriba bilan biznes markazlari va turar-joy binolari qurilishida yetakchi kompaniya! <br/> Ross and Foundation – Toshkentning zamonaviy arxitektura manzarasini yaratishda muhim o‘rin tutuvchi qurilish kompaniyasi. Biz 10 yildan beri biznes markazlari va yuqori sifatli turar-joy majmualarini barpo etib kelamiz.",
         "card1_title": "Kompaniya portfelidagi loyihalar",
         "card1_desc": "4 ta",
         "card2_title": "Ko'chmas mulk bozorida",
         "card2_desc": "6 yil",
         "card3_title": "Bizning loyihalarimizda odamlar yashaydi",
-        "card3_desc": "1000",
+        "card3_desc": "3000",
         "card4_title": "Turar joy hududlari M2",
         "card4_desc": "34 300",
         "fact_title": "Kompaniya haqida 5 ta fakt",
@@ -134,8 +134,9 @@
         "table_title2": "Yo’nalish",
         "table_title3": "Ish formati",
         "vacancies1_role": "Prorab",
-        "vacancies1_direction": "Buhgalteriya, Hisob-kitob",
-        "vacancies1_format": "Ofisda ishlash",
+        "vacancies1_direction": "Prorab",
+        "vacancies1_format": "Ofisda ishlash yoki Aralash format",
+        "vacancies1_more": "<h2 className='text-center'>VAKANSIYA: ISH BOSHQARUVCHI (PRORAB) – ROSS FOUNDATION QURILISH KOMPANIYASI</h2> <b>Ross Foundation</b> qurilish kompaniyasi 5 yillik tajribaga ega bo‘lib, qurilish obyektlarida ishlash uchun <b>ish boshqaruvchi (prorab)</b> qidirmoqda. </br> <b>Vazifalar:</b> </br> • Obyektda qurilish ishlarini tashkil etish va nazorat qilish. </br> • Ishchilar va pudratchilar ishini muvofiqlashtirish. </br> • Bajariladigan ishlarning muddati va sifatini nazorat qilish. </br> • Qurilish hujjatlarini yuritish. </br> • Obyektda xavfsizlik texnikasiga rioya qilish.</br> <b>Talablar:</b></br> • Prorab sifatida kamida 3 yillik ish tajribasi. </br>  • Qurilish me’yorlari va texnologiyalarini bilish. </br>• Chizma va loyiha hujjatlarini o‘qiy olish.</br> • Mas’uliyat, tashkilotchilik qobiliyati.</br> <b>Shartlar</b> </br> • Rasmiy ishga joylashish. </br> • Raqobatbardosh ish haqi. </br> • To‘lovli transport va turar joy (agar kerak bo‘lsa).</br> • Barqaror va rivojlanayotgan kompaniyada ishlash. </br> </br> 📩 <b>Ariza topshirish uchun:</b></br> 📞 <b>Telefon:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='malito:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>rossfoundationuz@gmail.com</b>",
         "vacancies2_role": "Injiner arxitektor",
         "vacancies2_direction": "Dizayn, mahsulot va arxitektura boshqaruvi",
         "vacancies2_format": "Ofisda ishlash",
@@ -408,48 +409,63 @@
         "car_text4": "5 min Kafe va Restoranlargacha"
     },
     "projects6": {
-        "title": "Novus Towers",
-        "subtitle": "Ilm va innovatsiyalar uchrashgan maskan",
+        "title": "Anhor",
+        "subtitle": "Toshkentning Yetakchi Savdo va Mehmondo‘stlik Maskani",
         "button_text1": "",
         "button_text2": "Qo'ng'iroq qilish",
-        "place": "Olamazor tumani",
-        "place_location": "Beruniy Shoh ko'chasi, Toshkent",
+        "place": "Yunusobod tumani",
+        "place_location": "Anhor bo'yi ko'chasi, Toshkent",
         "school": "",
         "school_location": "",
         "business_center": "",
         "business_center_location": "",
         "sports_complex": "",
         "sports_complex_location": "",
-        "image_desc": "The Knowledge Center – kelajak avlodni innovatsion bilimlar bilan ta’minlash uchun yaratilgan zamonaviy ta’lim markazi!",
-        "fact_title": "Loyiha haqida 5 ta fakt",
-        "fact_desc": "The Knowledge Center – bu 1 200 nafar o‘quvchi uchun mo‘ljallangan zamonaviy ta’lim markazi bo‘lib, ilmiy va texnologik rivojlanishga yo‘naltirilgan. Markaz kimyo va kompyuter fanlari uchun ilg‘or laboratoriyalar, innovatsion ta’lim uslublari va interaktiv o‘quv dasturlari bilan o‘quvchilarning amaliy ko‘nikmalarini rivojlantirishga xizmat qiladi. Toshkentdagi 243-maktab hududida joylashgan ushbu maskan, yorug‘ va qulay sinfxonalari bilan ta’lim sifatini oshirishga hamda kelajak avlodni innovatsion bilimlar bilan ta’minlashga qaratilgan.",
-        "fact_card1": "Shaharning ta’lim infratuzilmasiga qo‘shilgan muhim hissa",
-        "fact_card2": "Innovatsion o‘quv muhitini ta’minlovchi infratuzilma",
-        "fact_card3": "Ta’lim sifatini oshirishga yo‘naltirilgan yondashuv",
-        "fact_card4": "Yorug‘ va qulay o‘quv muhitiga ega binolar",
-        "fact_card5": "Ilmiy va texnologik rivojlanish markazi",
-        "area": "0.45 ga",
+        "image_desc": "Anhor – Toshkent shahrining markazida, Alisher Navoiy ko‘chasida joylashgan zamonaviy savdo va mehmondo‘stlik majmuasi bo‘lib, biznes va dam olish uchun qulay sharoit yaratadi. 6 500 kvadrat metr maydonni egallagan ushbu loyihada restoranlar, mehmonxona va tijorat ob’ektlari uyg‘unlashgan.",
+        "area": "0.65 ga",
         "area_title": "Loyiha maydoni",
         "floor": "4",
         "floor_title": "Qavatlar soni",
         "done_project": "2024",
         "done_project_title": "Qurilish bitkaziladigan sana",
-        "calculator": "Kalkulyator",
-        "calculator_title": "Binoni tanlang",
-        "area_input": "Kvadraturani kiriting",
-        "calculator_business": "Biznes markazi",
-        "area_sum": "23",
-        "area_sum_text": "Har bir m² uchun",
-        "total_amount": "Umumiy summa",
-        "calculator_button": "Band qilish",
         "location_title": "Joylashuvning qulayligi",
         "foot": "Piyoda",
-        "foot_text1": "10 min Metrogacha",
-        "foot_text3": "10 min Poliklinikagacha",
+        "foot_text1": "10 min Bog'gacha",
+        "foot_text3": "10 min Ko'ngilochar joylargacha",
         "foot_text4": "5 min Kafe va Restoranlargacha",
         "car": "Avtomobilda",
-        "car_text1": "5 min Metrogacha",
-        "car_text2": "5 min Poliklinikagacha",
+        "car_text1": "5 min Bog'gacha",
+        "car_text2": "5 min Ko'ngilochar joylargacha",
+        "car_text4": "5 min Kafe va Restoranlargacha"
+    },
+    "projects7": {
+        "title": "Oncowell Company",
+        "subtitle": "Toshkentda onkologiya dori vositalarini ishlab chiqarishni zavodi",
+        "button_text1": "",
+        "button_text2": "Qo'ng'iroq qilish",
+        "place": "",
+        "place_location": "",
+        "school": "",
+        "school_location": "",
+        "business_center": "",
+        "business_center_location": "",
+        "sports_complex": "",
+        "sports_complex_location": "",
+        "image_desc": "Oncowell Company – Toshkent viloyatida qurilishi rejalashtirilgan zamonaviy tibbiyot fabrikasi. Ushbu korxona onkologiya dori vositalarini ishlab chiqarishga ixtisoslashgan bo‘lib, O‘zbekistonda farmatsevtika sanoatini rivojlantirishda muhim rol o‘ynaydi. Fabrika Toshkent Pharm Park sanoat hududida joylashgan bo‘lib, 15 000 kvadrat metr yer maydonini egallaydi, umumiy qurilish maydoni esa 4 000 kvadrat metrni tashkil etadi.",
+        "area": "1.5 ga",
+        "area_title": "Loyiha maydoni",
+        "floor": "4",
+        "floor_title": "Qavatlar soni",
+        "done_project": "2024",
+        "done_project_title": "Qurilish bitkaziladigan sana",
+        "location_title": "Joylashuvning qulayligi",
+        "foot": "Piyoda",
+        "foot_text1": "10 min Bog'gacha",
+        "foot_text3": "10 min Ko'ngilochar joylargacha",
+        "foot_text4": "5 min Kafe va Restoranlargacha",
+        "car": "Avtomobilda",
+        "car_text1": "5 min Bog'gacha",
+        "car_text2": "5 min Ko'ngilochar joylargacha",
         "car_text4": "5 min Kafe va Restoranlargacha"
     },
     "footer": {
