--- a/src/utils/i18n/locals/en/en.json
+++ b/src/utils/i18n/locals/en/en.json
@@ -128,24 +128,19 @@
         "loading_text": "Sending..."
     },
     "vacancies_page": {
-        "title": "Karyerangizni biz bilan boshlang",
-        "button_text": "Ariza topshirish",
-        "table_title1": "Vakansiyalar",
-        "table_title2": "Yo’nalish",
-        "table_title3": "Ish formati",
-        "vacancies1_role": "Bosh xisobchi",
-        "vacancies1_direction": "Buhgalteriya, Hisob-kitob",
-        "vacancies1_format": "Ofisda ishlash",
-        "vacancies1_more_info":"",
-        "vacancies2_role": "Injiner arxitektor",
-        "vacancies2_direction": "Dizayn, mahsulot va arxitektura boshqaruvi",
-        "vacancies2_format": "Ofisda ishlash",
-        "vacancies3_role": "Interier Dizayner",
-        "vacancies3_direction": "Dizayn, mahsulot va arxitektura boshqaruvi",
-        "vacancies3_format": "Ofisda ishlash",
-        "vacancies4_role": "Exterier Dizayner",
-        "vacancies4_direction": "Dizayn, mahsulot va arxitektura boshqaruvi",
-        "vacancies4_format": "Remote"
+        "title": "Start Your Career with Us",
+        "button_text": "Apply Now",
+        "table_title1": "Vacancies",
+        "table_title2": "Field",
+        "table_title3": "Work Format",
+        "vacancies1_role": "Foreman",
+        "vacancies1_direction": "Foreman",
+        "vacancies1_format": "Office Work or Hybrid Format",
+        "vacancies1_more": "<h2 className='text-center'>VACANCY: FOREMAN – ROSS FOUNDATION CONSTRUCTION COMPANY</h2> <b>Ross Foundation</b> is a construction company with 5 years of experience, looking for a <b>foreman</b> to manage construction sites. </br> <b>Responsibilities:</b> </br> • Organizing and supervising construction works on-site. </br> • Coordinating workers and subcontractors. </br> • Controlling deadlines and quality of work. </br> • Maintaining construction documentation. </br> • Ensuring compliance with safety regulations.</br> <b>Requirements:</b></br> • At least 3 years of experience as a foreman. </br> • Knowledge of construction standards and technologies. </br>• Ability to read drawings and project documents.</br> • Responsibility and organizational skills.</br> <b>Conditions:</b> </br> • Official employment. </br> • Competitive salary. </br> • Paid transport and accommodation (if needed).</br> • Work in a stable and growing company. </br> </br> 📩 <b>To Apply:</b></br> 📞 <b>Phone:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>Join Ross Foundation and grow with us!</b>",
+        "vacancies2_role": "Construction Manager",
+        "vacancies2_direction": "Construction Manager",
+        "vacancies2_format": "Office Work",
+        "vacancies2_more": "<h2 className='text-center'>VACANCY: CONSTRUCTION MANAGER – ROSS FOUNDATION COMPANY</h2> <b>Ross Foundation</b> is a construction company with 5 years of experience, looking for a <b>construction manager</b> to coordinate projects and oversee construction processes. </br> <b>Responsibilities:</b> </br> • Organizing and supervising construction works. </br> • Managing projects: planning, deadlines, and budget control. </br> • Collaborating with contractors, clients, and designers. </br> • Ensuring quality control and compliance with construction standards. </br> • Handling project documentation and reporting.</br> <b>Requirements:</b></br> • At least 3 years of experience as a construction manager/foreman. </br> • Higher or secondary specialized education in construction. </br>• Knowledge of construction technologies, SNiP, and safety regulations.</br> • Team management and negotiation skills.</br> • Organizational skills, responsibility, and multitasking ability.</br> <b>Conditions:</b> </br> • Official employment. </br> • Competitive salary. </br> • Transport cost reimbursement.</br> • Career growth in a stable company. </br> </br> 📩 <b>To Apply:</b></br> 📞 <b>Phone:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>Join Ross Foundation and grow with us!</b>"
     },
     "vacancies_form": {
         "title": "Submit an Application",
