--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -128,23 +128,19 @@
         "loading_text": "Отправка..."
     },
     "vacancies_page": {
-        "title": "Karyerangizni biz bilan boshlang",
-        "button_text": "Ariza topshirish",
-        "table_title1": "Vakansiyalar",
-        "table_title2": "Yo’nalish",
-        "table_title3": "Ish formati",
-        "vacancies1_role": "Bosh xisobchi",
-        "vacancies1_direction": "Buhgalteriya, Hisob-kitob",
-        "vacancies1_format": "Ofisda ishlash",
-        "vacancies2_role": "Injiner arxitektor",
-        "vacancies2_direction": "Dizayn, mahsulot va arxitektura boshqaruvi",
-        "vacancies2_format": "Ofisda ishlash",
-        "vacancies3_role": "Interier Dizayner",
-        "vacancies3_direction": "Dizayn, mahsulot va arxitektura boshqaruvi",
-        "vacancies3_format": "Ofisda ishlash",
-        "vacancies4_role": "Exterier Dizayner",
-        "vacancies4_direction": "Dizayn, mahsulot va arxitektura boshqaruvi",
-        "vacancies4_format": "Remote"
+        "title": "Начните свою карьеру с нами",
+        "button_text": "Подать заявку",
+        "table_title1": "Вакансии",
+        "table_title2": "Направление",
+        "table_title3": "Формат работы",
+        "vacancies1_role": "Прораб",
+        "vacancies1_direction": "Прораб",
+        "vacancies1_format": "Работа в офисе или смешанный формат",
+        "vacancies1_more": "<h2 className='text-center'>ВАКАНСИЯ: ПРОРАБ – СТРОИТЕЛЬНАЯ КОМПАНИЯ ROSS FOUNDATION</h2> <b>Ross Foundation</b> – строительная компания с 5-летним опытом, ищет <b>прораба</b> для работы на строительных объектах. </br> <b>Обязанности:</b> </br> • Организация и контроль строительных работ на объекте. </br> • Координация работы рабочих и подрядчиков. </br> • Контроль сроков и качества выполнения работ. </br> • Ведение строительной документации. </br> • Соблюдение техники безопасности на объекте.</br> <b>Требования:</b></br> • Опыт работы прорабом минимум 3 года. </br> • Знание строительных норм и технологий. </br>• Умение читать чертежи и проектную документацию.</br> • Ответственность, организаторские способности.</br> <b>Условия:</b> </br> • Официальное трудоустройство. </br> • Конкурентоспособная зарплата. </br> • Оплачиваемый транспорт и жилье (при необходимости).</br> • Работа в стабильной и развивающейся компании. </br> </br> 📩 <b>Для подачи заявки:</b></br> 📞 <b>Телефон:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>Присоединяйтесь к команде Ross Foundation и развивайтесь вместе с нами!</b>",
+        "vacancies2_role": "Менеджер по строительству",
+        "vacancies2_direction": "Менеджер по строительству",
+        "vacancies2_format": "Работа в офисе",
+        "vacancies2_more": "<h2 className='text-center'>ВАКАНСИЯ: МЕНЕДЖЕР ПО СТРОИТЕЛЬСТВУ – КОМПАНИЯ ROSS FOUNDATION</h2> <b>Ross Foundation</b> – строительная компания с 5-летним опытом, ищет <b>менеджера по строительству</b> для координации проектов и управления процессами на объектах. </br> <b>Обязанности:</b> </br> • Организация и контроль строительных работ. </br> • Управление проектами: планирование, контроль сроков и бюджета. </br> • Взаимодействие с подрядчиками, заказчиками и проектировщиками. </br> • Контроль качества работ и соблюдения строительных норм. </br> • Ведение документации и отчетности по проектам.</br> <b>Требования:</b></br> • Опыт работы менеджером по строительству/прорабом не менее 3 лет. </br> • Высшее или среднее специальное образование в строительной сфере. </br>• Знание строительных технологий, СНиП и норм безопасности.</br> • Навыки управления командой и ведения переговоров.</br> • Организаторские способности, ответственность, многозадачность.</br> <b>Условия:</b> </br> • Официальное трудоустройство. </br> • Конкурентоспособная зарплата. </br> • Компенсация транспортных расходов.</br> • Возможности роста в стабильной компании. </br> </br> 📩 <b>Для подачи заявки:</b></br> 📞 <b>Телефон:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>Присоединяйтесь к команде Ross Foundation и развивайтесь вместе с нами!</b>"
     },
     "vacancies_form": {
         "title": "Оставить заявку",
