--- a/src/utils/i18n/locals/en/en.json
+++ b/src/utils/i18n/locals/en/en.json
@@ -146,7 +146,7 @@
         "title": "Submit an Application",
         "desc": "Our HR specialists carefully review all received resumes. Even if your work experience, skills, and qualifications do not currently meet the requirements of available vacancies, we will still add your resume to our database and contact you when a suitable position becomes available.",
         "name": "First Name Last Name",
-        "phone_number": "+998 99 123 45 67",
+        "phone_number": "+998991234567",
         "email": "Email",
         "select_placeholder": "Vacancies",
         "button_text": "Submit Application",
