--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -146,7 +146,7 @@
         "title": "Оставить заявку",
         "desc": "Наши HR-специалисты внимательно рассматривают все полученные резюме. Даже если ваш опыт работы, навыки и квалификация в данный момент не соответствуют требованиям доступных вакансий, мы добавим ваше резюме в нашу базу данных и свяжемся с вами, когда появится подходящая должность.",
         "name": "Имя Фамилия",
-        "phone_number": "+998 99 123 45 67",
+        "phone_number": "+998991234567",
         "email": "Email",
         "select_placeholder": "Вакансии",
         "button_text": "Отправить заявку",
