--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -146,14 +146,14 @@
         "title": "Ariza qoldirish",
         "desc": "Bizning HR mutaxassislarimiz olingan barcha rezyumelarni diqqat bilan ko'rib chiqadilar. Sizning ish tajribangiz, ko'nikma va malakalaringiz hozirda mavjud bo'sh ish o'rinlari talablariga javob bermasa ham, biz sizning rezyumeingizni albatta ma'lumotlar bazamizga qo'shamiz va mos narsa paydo bo'lganda siz bilan bog'lanamiz.",
         "name": "Ism Familya",
-        "phone_number": "+998 99 123 45 67",
+        "phone_number": "+998991234567",
         "email": "Email",
         "select_placeholder": "Vakansiyalar",
         "button_text": "Ariza topshirish",
         "file_input_text1": "Fayllarni bu yerga torting yoki fayllarni tanlash uchun bosing",
         "file_input_text2": "Fayl 5mb dan oshmasligi kerak",
         "email_error": "Email noto‘g‘ri formatda!",
-        "select_error": "Telefon raqam kiritilishi shart!",
+        "select_error": "Vakansiyalardan biri tanlanishi kerak!",
         "file_error1": "Faqat .doc, .docx yoki .pdf fayllar qo‘llab-quvvatlanadi!",
         "file_error2": "Fayl hajmi 5MB dan oshmasligi kerak!"
     },
