--- a/src/utils/i18n/locals/en/en.json
+++ b/src/utils/i18n/locals/en/en.json
@@ -125,11 +125,15 @@
         "name_error2": "At least one uppercase letter is required",
         "name_error3": "At least one lowercase letter is required",
         "phone_number_error": "The phone number must start with +998 and be entered in the format +998912345678.",
-        "loading_text": "Sending..."
+        "loading_text": "Sending...",
+        "success": "Data successfully sent!",
+        "error_message": "An error occurred while sending your information, please try again"
     },
     "vacancies_page": {
         "title": "Start Your Career with Us",
         "button_text": "Apply Now",
+        "button_text2": "More details",
+        "close_button": "Close",
         "table_title1": "Vacancies",
         "table_title2": "Field",
         "table_title3": "Work Format",
@@ -421,7 +425,7 @@
         "area_title": "Project Area",
         "floor": "4",
         "floor_title": "Number of Floors",
-        "done_project": "2024",
+        "done_project": "2025",
         "done_project_title": "Construction Completion Date",
         "location_title": "Convenient Location",
         "foot": "On Foot",
@@ -449,9 +453,11 @@
         "image_desc": "Oncowell Company is a modern medical factory planned for construction in the Tashkent region. The enterprise specializes in the production of oncology medicines and plays an important role in the development of Uzbekistan’s pharmaceutical industry. The factory is located in the Tashkent Pharm Park industrial zone, covering an area of 15,000 square meters, with a total construction area of 4,000 square meters.",
         "area": "1.5 ha",
         "area_title": "Project Area",
+        "home_count": "2",
+        "home_count_title": "Number of blocks",
         "floor": "4",
         "floor_title": "Number of Floors",
-        "done_project": "2024",
+        "done_project": "2025",
         "done_project_title": "Construction Completion Date",
         "location_title": "Convenient Location",
         "foot": "On Foot",
