--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -125,11 +125,15 @@
         "name_error2": "Должна быть хотя бы одна заглавная буква",
         "name_error3": "Должна быть хотя бы одна строчная буква",
         "phone_number_error": "Номер телефона должен начинаться с +998 и быть введён в формате +998912345678.",
-        "loading_text": "Отправка..."
+        "loading_text": "Отправка...",
+        "success": "Данные успешно отправлены!",
+        "error_message": "Произошла ошибка при отправке ваших данных, пожалуйста, попробуйте еще раз"
     },
     "vacancies_page": {
         "title": "Начните свою карьеру с нами",
         "button_text": "Подать заявку",
+        "button_text2": "Подробнее",
+        "close_button": "Закрыть",
         "table_title1": "Вакансии",
         "table_title2": "Направление",
         "table_title3": "Формат работы",
@@ -428,7 +432,7 @@
         "area_title": "Площадь проекта",
         "floor": "4",
         "floor_title": "Количество этажей",
-        "done_project": "2024",
+        "done_project": "2025",
         "done_project_title": "Дата завершения строительства",
         "location_title": "Удобство расположения",
         "foot": "Пешком",
@@ -456,9 +460,11 @@
         "image_desc": "Oncowell Company – это современный медицинский завод, запланированный к строительству в Ташкентской области. Предприятие специализируется на производстве онкологических препаратов и играет важную роль в развитии фармацевтической индустрии Узбекистана. Завод расположен в промышленной зоне Tashkent Pharm Park и занимает территорию 15 000 квадратных метров, а общая площадь застройки составляет 4 000 квадратных метров.",
         "area": "1.5 га",
         "area_title": "Площадь проекта",
+        "home_count": "2",
+        "home_count_title": "Количество блоков",
         "floor": "4",
         "floor_title": "Количество этажей",
-        "done_project": "2024",
+        "done_project": "2025",
         "done_project_title": "Дата завершения строительства",
         "location_title": "Удобство расположения",
         "foot": "Пешком",
