--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -125,11 +125,15 @@
         "name_error2": "Kamida bitta katta harf bo‘lishi kerak",
         "name_error3": "Kamida bitta kichik harf bo‘lishi kerak",
         "phone_number_error": "Telefon raqam +998 bilan boshlanishi va +998912345678 tartibida kiritilishi kerak",
-        "loading_text": "Yuborilmoqda..."
+        "loading_text": "Yuborilmoqda...",
+        "success": "Ma'lumotlar muvaffaqiyatli yuborildi!",
+        "error_message": "Ma'lumotlaringizni yuborishda qandaydir xatolik yuz berdi iltimos qaytadan urinib ko'ring"
     },
     "vacancies_page": {
         "title": "Karyerangizni biz bilan boshlang",
         "button_text": "Ariza topshirish",
+        "button_text2":"Batafsil",
+        "close_button":"Yopish",
         "table_title1": "Vakansiyalar",
         "table_title2": "Yo’nalish",
         "table_title3": "Ish formati",
@@ -421,7 +425,7 @@
         "area_title": "Loyiha maydoni",
         "floor": "4",
         "floor_title": "Qavatlar soni",
-        "done_project": "2024",
+        "done_project": "2025",
         "done_project_title": "Qurilish bitkaziladigan sana",
         "location_title": "Joylashuvning qulayligi",
         "foot": "Piyoda",
@@ -449,9 +453,11 @@
         "image_desc": "Oncowell Company – Toshkent viloyatida qurilishi rejalashtirilgan zamonaviy tibbiyot fabrikasi. Ushbu korxona onkologiya dori vositalarini ishlab chiqarishga ixtisoslashgan bo‘lib, O‘zbekistonda farmatsevtika sanoatini rivojlantirishda muhim rol o‘ynaydi. Fabrika Toshkent Pharm Park sanoat hududida joylashgan bo‘lib, 15 000 kvadrat metr yer maydonini egallaydi, umumiy qurilish maydoni esa 4 000 kvadrat metrni tashkil etadi.",
         "area": "1.5 ga",
         "area_title": "Loyiha maydoni",
-        "floor": "4",
+        "home_count": "2",
+        "home_count_title": "Bloklar soni",
+        "floor": "3",
         "floor_title": "Qavatlar soni",
-        "done_project": "2024",
+        "done_project": "2025",
         "done_project_title": "Qurilish bitkaziladigan sana",
         "location_title": "Joylashuvning qulayligi",
         "foot": "Piyoda",
